--- a/workshop_2019/Day1_with_solutions.ipynb
+++ b/workshop_2019/Day1_with_solutions.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,9 +73,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
+    }
+   ],
    "source": [
     "print(a)"
    ]
@@ -95,45 +103,100 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "a == 1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "a == 2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "a == 1 or a == 2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "a == 1 and a == 2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "a == 1 or b == 2"
    ]
@@ -153,15 +216,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\nHELP MY CODE IS KILLING ME!!!!!!\\n'"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "i = 1\n",
+    "i = 1 # what is the answer???? help pls!!!!\n",
     "j = 2.43\n",
     "k = 'Hello world!'\n",
     "L = 3. \n",
-    "#m = hello world!"
+    "#m = hello world!\n",
+    "\n",
+    "'''\n",
+    "HELP MY CODE IS KILLING ME!!!!!!\n",
+    "'''"
    ]
   },
   {
@@ -181,11 +259,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.0 1 2\n",
+      "<class 'float'> <class 'str'> <class 'int'>\n",
+      "<class 'str'>\n"
+     ]
+    }
+   ],
    "source": [
-    "# solution here"
+    "# solution here\n",
+    "\n",
+    "i_float = float(i)\n",
+    "i_string = str(i)\n",
+    "j_int = int(j)\n",
+    "print(i_float, i_string, j_int)\n",
+    "print(type(i_float), type(i_string), type(j_int))\n",
+    "print(type(k))"
    ]
   },
   {
@@ -197,11 +292,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "invalid literal for int() with base 10: 'Hello world!'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-17-167a2ab36a9d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m#solution here\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mk_int\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mk\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m: invalid literal for int() with base 10: 'Hello world!'"
+     ]
+    }
+   ],
    "source": [
-    "#solution here"
+    "#solution here\n",
+    "\n",
+    "k_int = int(k)"
    ]
   },
   {
@@ -213,11 +322,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
+    }
+   ],
    "source": [
-    "# solution here"
+    "# solution here\n",
+    "\n",
+    "q = '1.4'\n",
+    "o = int(float(q))\n",
+    "print(o)"
    ]
   },
   {
@@ -239,9 +360,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8\n"
+     ]
+    }
+   ],
    "source": [
     "example = 5 + 3\n",
     "print(example)"
@@ -249,36 +378,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3.43"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "i + j"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2.43"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "i * j"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.4300000000000002"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "j - i"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.4115226337448559"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "i / j "
    ]
@@ -305,9 +478,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Barry B. Benson', 'Vanessa Bloome', 'Ray Liotta as Ray Liotta']\n"
+     ]
+    }
+   ],
    "source": [
     "beemovie = ['Barry B. Benson', 'Vanessa Bloome', 'Ray Liotta as Ray Liotta']\n",
     "print(beemovie)"
@@ -322,18 +503,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
-    "myarray = np.array([1, 2, 3])"
+    "myarray = np.array([1, 2, 3])\n",
+    "my2darray = np.array([[1, 2], [1, 2]])"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The whole array must be enclosed in parentheses. Each row of the array should be in its own set of brackets, separated by commas.\n",
+    "You will call the array function within parentheses (). The whole array must be enclosed in a set of brackets []. Each row of the array should be in its own set of brackets, separated by commas.\n",
     "\n",
     "### Question 3: Create the following 2D array:\n",
     "\n",
@@ -343,11 +525,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1 2 3]\n",
+      " [4 5 6]]\n"
+     ]
+    }
+   ],
    "source": [
-    "#solution here"
+    "#solution here\n",
+    "\n",
+    "another_2d_array = np.array([[1, 2, 3], [4, 5, 6]])\n",
+    "\n",
+    "print(another_2d_array)"
    ]
   },
   {
@@ -367,16 +562,33 @@
     "    np.linspace(beginning number, end number, number of values)\n",
     "    np.logspace(log(beginning number), log(end number), number of values)\n",
     "    \n",
-    "### Question 4: Create two arrays with ten entries between 1 and 100, one in linear space and the other in logspace."
+    "### Question 4: Create two arrays with ten entries between 1 and 100, one in linear space and the other in logspace.\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[  1.  12.  23.  34.  45.  56.  67.  78.  89. 100.] [  1.           1.66810054   2.7825594    4.64158883   7.74263683\n",
+      "  12.91549665  21.5443469   35.93813664  59.94842503 100.        ] [  1.           1.66810054   2.7825594    4.64158883   7.74263683\n",
+      "  12.91549665  21.5443469   35.93813664  59.94842503 100.        ]\n"
+     ]
+    }
+   ],
    "source": [
-    "# solution here"
+    "# solution here\n",
+    "\n",
+    "linarray = np.linspace(1, 100, 10)\n",
+    "logarray = np.logspace(0, 2, 10)\n",
+    "logarray_alt = np.logspace(np.log10(1), np.log10(100), 10)\n",
+    "\n",
+    "print(linarray, logarray, logarray_alt)"
    ]
   },
   {
@@ -394,11 +606,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[  1  11  21  31  41  51  61  71  81  91 101]\n"
+     ]
+    }
+   ],
    "source": [
-    "# solution here"
+    "# solution here\n",
+    "\n",
+    "arange_array = np.arange(1, 110, 10)\n",
+    "print(arange_array)"
    ]
   },
   {
@@ -421,11 +644,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0. 0. 0.]\n",
+      " [0. 0. 0.]\n",
+      " [0. 0. 0.]]\n"
+     ]
+    }
+   ],
    "source": [
-    "#solution here"
+    "#solution here\n",
+    "\n",
+    "zeros_array = np.zeros((3, 3))\n",
+    "\n",
+    "print(zeros_array)"
    ]
   },
   {
@@ -451,11 +688,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.0 100.0\n"
+     ]
+    }
+   ],
    "source": [
-    "#solution here"
+    "#solution here\n",
+    "\n",
+    "first_value = linarray[0]\n",
+    "last_value = linarray[-1]\n",
+    "print(first_value, last_value)"
    ]
   },
   {
@@ -480,11 +729,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 1. 12. 23. 34. 45.] [  1.66810054   2.7825594    4.64158883   7.74263683  12.91549665\n",
+      "  21.5443469   35.93813664  59.94842503 100.        ] [41 51 61 71] [ 1. 23. 45. 67. 89.] [ 1. 23. 45. 67. 89.]\n",
+      "[100.  89.  78.  67.  56.  45.  34.  23.  12.   1.]\n"
+     ]
+    }
+   ],
    "source": [
-    "#solution here"
+    "#solution here\n",
+    "\n",
+    "until_index_5 = linarray[:5]\n",
+    "begin_at_1 = logarray[1:]\n",
+    "between_4_8 = arange_array[4:8]\n",
+    "steps_of_2 = linarray[::2]\n",
+    "steps_of_2_longway = linarray[0:-1:2]\n",
+    "print(until_index_5, begin_at_1, between_4_8, steps_of_2, steps_of_2_longway)\n",
+    "\n",
+    "#bonus: reversing arrays!\n",
+    "linarray_backwards = linarray[::-1]\n",
+    "print(linarray_backwards)"
    ]
   },
   {
@@ -523,11 +793,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# solution here"
+    "# solution here\n",
+    "\n",
+    "#the first one is asking you to find the LOCATION where the condition is true\n",
+    "where_array = np.where(linarray > 10)\n",
+    "\n",
+    "#the second one is asking you to find THE VALUES that meet the condition\n",
+    "array_where_true = linarray[where_array]\n",
+    "where_gt1_lt10 = np.where( (linarray > 1) & (linarray < 10) )\n",
+    "where_div2_lt50 = np.where( linarray / 2 < 50 )\n",
+    "\n"
    ]
   },
   {
@@ -543,11 +822,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 0.5         0.83405027  1.3912797   2.32079442  3.87131841  6.45774833\n",
+      " 10.77217345 17.96906832 29.97421252 50.        ] [  3.  14.  25.  36.  47.  58.  69.  80.  91. 102.]\n"
+     ]
+    }
+   ],
    "source": [
-    "#solution here"
+    "#solution here\n",
+    "\n",
+    "logarray_div_2 = logarray / 2\n",
+    "linarray_plus_2 = linarray + 2\n",
+    "\n",
+    "print(logarray_div_2, linarray_plus_2)"
    ]
   },
   {
@@ -568,11 +861,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[  1.          12.          23.          34.          45.\n",
+      "  56.          67.          78.          89.         100.\n",
+      " 100.         111.11111111 122.22222222 133.33333333 144.44444444\n",
+      " 155.55555556 166.66666667 177.77777778 188.88888889 200.        ]\n"
+     ]
+    }
+   ],
    "source": [
-    "#solution here"
+    "#solution here\n",
+    "\n",
+    "linarray_append = np.append(linarray, np.linspace(100, 200, 10))\n",
+    "print(linarray_append)"
    ]
   },
   {
@@ -605,8 +912,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Now, go to the homepage of the Jupyter notebook and open up the Exercises.ipynb file. Edit the title of the file to have your name at the end of it, because you will hand this in at the end of the workshop."
+    "### You will have received a link to our github classroom which will have your exercise assignments. (This is also included in Exercises_edit_with_your_name.ipynb in this directory, if you're following along outside of the in-person seminar.) Please do the Day 1 exercises and upload this to github before the start of the next session on Thursday."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
