--- a/workshop_2019/Exercises_(edit-with-your-name).ipynb
+++ b/workshop_2019/Exercises_(edit-with-your-name).ipynb
@@ -15,11 +15,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# import your libraries here"
+    "# import your libraries here\n",
+    "\n",
+    "import numpy as np"
    ]
   },
   {
@@ -47,11 +49,94 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "logarray: [1.00000000e-01 3.59381366e-01 1.29154967e+00 4.64158883e+00\n",
+      " 1.66810054e+01 5.99484250e+01 2.15443469e+02 7.74263683e+02\n",
+      " 2.78255940e+03 1.00000000e+04] \n",
+      " \n",
+      "\n",
+      "first: 0.1 last: 10000.0 5th-8th: [ 16.68100537  59.94842503 215.443469   774.26368268] \n",
+      " \n",
+      "\n",
+      "appended array: [1.00000000e-01 3.59381366e-01 1.29154967e+00 4.64158883e+00\n",
+      " 1.66810054e+01 5.99484250e+01 2.15443469e+02 7.74263683e+02\n",
+      " 2.78255940e+03 1.00000000e+04 1.00010000e+04 1.00020000e+04] \n",
+      " \n",
+      "\n",
+      "divided array: [5.00000000e-02 1.79690683e-01 6.45774833e-01 2.32079442e+00\n",
+      " 8.34050269e+00 2.99742125e+01 1.07721735e+02 3.87131841e+02\n",
+      " 1.39127970e+03 5.00000000e+03 5.00050000e+03 5.00100000e+03] \n",
+      " \n",
+      "\n",
+      "efficiently divided array: [5.00000000e-02 1.79690683e-01 6.45774833e-01 2.32079442e+00\n",
+      " 8.34050269e+00 2.99742125e+01 1.07721735e+02 3.87131841e+02\n",
+      " 1.39127970e+03 5.00000000e+03 5.00050000e+03 5.00100000e+03] \n",
+      " \n",
+      "\n",
+      "3x4 array: [[5.00000000e-02 1.79690683e-01 6.45774833e-01 2.32079442e+00]\n",
+      " [8.34050269e+00 2.99742125e+01 1.07721735e+02 3.87131841e+02]\n",
+      " [1.39127970e+03 5.00000000e+03 5.00050000e+03 5.00100000e+03]] \n",
+      " \n",
+      "\n",
+      "multiplied arrays: [[2.50000000e-03 3.22887416e-02 4.17025134e-01 5.38608673e+00]\n",
+      " [6.95639851e+01 8.98453416e+02 1.16039721e+04 1.49871063e+05]\n",
+      " [1.93565921e+06 2.50000000e+07 2.50050002e+07 2.50100010e+07]] \n",
+      " \n",
+      " [[5.83790060e+00 9.73820513e+02 1.58035073e+04]\n",
+      " [9.73820513e+02 1.62443052e+05 2.63618391e+06]\n",
+      " [1.58035073e+04 2.63618391e+06 7.69506605e+07]] \n",
+      " \n",
+      " [[2.50000000e-03 3.22887416e-02 4.17025134e-01 5.38608673e+00]\n",
+      " [6.95639851e+01 8.98453416e+02 1.16039721e+04 1.49871063e+05]\n",
+      " [1.93565921e+06 2.50000000e+07 2.50050002e+07 2.50100010e+07]] \n",
+      "\n",
+      "\n",
+      "n dimensions: 2 max value: 25010001.0\n"
+     ]
+    }
+   ],
    "source": [
-    "# your solution here"
+    "# your solution here\n",
+    "\n",
+    "#A.\n",
+    "logarray = np.logspace(-1, 4, 10)\n",
+    "print(\"logarray:\", logarray, \"\\n \\n\")\n",
+    "\n",
+    "#B.\n",
+    "print(\"first:\", logarray[0], \"last:\", logarray[-1], \"5th-8th:\", logarray[4:8], \"\\n \\n\")\n",
+    "\n",
+    "#C. \n",
+    "appended_logarray = np.append(logarray, [10001., 10002.])\n",
+    "print(\"appended array:\", appended_logarray, \"\\n \\n\")\n",
+    "\n",
+    "#D. \n",
+    "divided_array = appended_logarray / 2\n",
+    "appended_logarray /= 2\n",
+    "print(\"divided array:\", divided_array, \"\\n \\n\")\n",
+    "print(\"efficiently divided array:\", appended_logarray, \"\\n \\n\")\n",
+    "\n",
+    "#E. \n",
+    "reshaped_array = divided_array.reshape(3, 4)\n",
+    "print(\"3x4 array:\", reshaped_array, \"\\n \\n\")\n",
+    "\n",
+    "#F. \n",
+    "multiplied_array = reshaped_array**2\n",
+    "multiplied_array_dot = np.dot(reshaped_array, reshaped_array.T)\n",
+    "reshaped_array **= 2\n",
+    "print(\"multiplied arrays:\", multiplied_array, \"\\n \\n\", multiplied_array_dot, \"\\n \\n\",\\\n",
+    "     reshaped_array, \"\\n\" \"\\n\")\n",
+    "\n",
+    "#G.\n",
+    "print(\"n dimensions:\", reshaped_array.ndim, \"max value:\", np.max(reshaped_array))\n",
+    "#note that if you use max(), you will need to flatten the array\n",
+    "#np.max knows what you mean\n",
+    "#np.amax also knows what you mean"
    ]
   },
   {
@@ -77,11 +162,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 4. 16.]\n",
+      " [ 0.  0.]\n",
+      " [ 6. 36.]\n",
+      " [ 5. 25.]\n",
+      " [ 0.  0.]\n",
+      " [ 0.  0.]\n",
+      " [ 0.  0.]\n",
+      " [ 0.  0.]\n",
+      " [ 5. 25.]\n",
+      " [ 0.  0.]]\n"
+     ]
+    }
+   ],
    "source": [
-    "# your solutions here"
+    "# your solutions here\n",
+    "\n",
+    "#A.\n",
+    "array_day2 = np.array([4, 0, 6, 5, 11, 14, 12, 14, 5, 16])\n",
+    "\n",
+    "#B.\n",
+    "zero_array = np.zeros((10, 2))\n",
+    "\n",
+    "#C. \n",
+    "for A in range(len(array_day2)):\n",
+    "    checksquare = array_day2[A]**2\n",
+    "    if checksquare < 100:\n",
+    "        zero_array[A] = [array_day2[A], array_day2[A]**2]\n",
+    "        \n",
+    "#D.\n",
+    "print(zero_array)"
    ]
   },
   {
