--- a/workshop_2019/Day1_with_solutions.ipynb
+++ b/workshop_2019/Day1_with_solutions.ipynb
@@ -5,6 +5,8 @@
    "metadata": {},
    "source": [
     "# TAURUS + REU 2019\n",
+    "## written by Jackie Champagne (UT Austin)\n",
+    "\n",
     "# Introduction to Python Day 1\n",
     "# Basic Syntax, Variables & Arrays"
    ]
