--- a/workshop_2019/Day4.ipynb
+++ b/workshop_2019/Day4.ipynb
@@ -187,7 +187,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "LD4 = cosmo.luminosity_distance(4)\n",
+    "LD4 = cosmo.luminosity_distance(4).to('kpc').value\n",
     "ADD4 = cosmo.angular_diameter_distance(4)\n",
     "\n",
     "print(LD4, ADD4)"
