--- a/workshop_2022_final/Day2_Solutions.ipynb
+++ b/workshop_2022_final/Day2_Solutions.ipynb
@@ -284,7 +284,7 @@
     "\n",
     "You have a last minute linear algebra homework and you are tired of doing matrix multiplication by hand so you decide to use your amazing python knowledge to speed things up. You get the idea that you can code up matrix multiplication to get the answer. Your goal is to wirte a function that takes any N x M and M x P array and performs the matrix multiplication that results in an N x P matrix. The equation for getting the elements of the matrix product C from matrix A and B is given below.\n",
     "\n",
-    "![Screen%20Shot%202022-05-25%20at%2010.26.24%20AM.png](attachment:Screen%20Shot%202022-05-25%20at%2010.26.24%20AM.png)\n",
+    "$$ c_{ij} = a_{i1}b_{1j} + a_{i2}b_{2j} + \\ldots + a_{in}b_{nj} = \\sum_{k=1}^{n} a_{ik}b_{kj} $$\n",
     "\n",
     "Where i corresponds to the rows, j corresponds to the columns."
    ]
